styles.css
/* General CSS which affects whole page */
* {
  margin:0;
  padding:0;
  box-sizing: border-box;
}

html {
  font-size:62.5%;
  scroll-behavior: smooth;
}

body {
  font-size: 1.6em;
  background-color: #c5c1c1;
  font-family: 'Fira Sans', sans-serif;
}

.wrapper {
  max-width: 1000px;
  margin: 0 auto;
}

h1, h2 {
  font-family: 'Frank Ruhl Libre', serif;
}

.heading {
  font-size: 3em;
  line-height: 1em;
}

.medium {
  font-size: 1.8em;
}

p {
  margin: 0;
  color: rgba(0, 0, 0, 0.6);
}

.white-text {
  color: white;
}

a.btn {
  background: white;
  padding: 14px 44px;
  border-radius: 100px;
  text-decoration: none;
  text-transform: uppercase;
  font-family: 'Fira Sans', sans-serif;
  font-size: 10px;
  font-weight: bold;
  color: black;
  box-shadow: 0px 2px 0px rgba(0, 0, 0, 0.1)
}

/* ~~~~~~~~~~~~~~Landing page ~~~~~~~~~~~~~~~~ */

/* Hero section */
.hero-main {
  background: #C7DDEA;
  padding: 0 10px 0 10px;
  display: flex;
  flex-direction: column;
  
}

.hero-main h1 {
  margin-top: 70px;
  font-size: 45px;
}

.hero-main p {
  margin-top: 20px;
  font-size: 14px;
  font-weight: 500;
  line-height: 24px;
 }

.hero-main a {
  align-self: flex-start;
  margin-top: 40px;
}

.hero-main img {
  align-self: center;
  max-width: 100%;
  margin-top: 40px;
}

.hero-learn-more {
  background: #F17949;
}

.hero-join-today {
  background: #FAB131;
}

.hero-aside {
  min-height: 315px;
  display:flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
}

.hero-aside h3 {
  color: white;
  font-size: 32px;
  font-weight: 900;
}

.hero-aside p {
  font-size: 11px;
  font-weight: bold;
}

/* Navigation */
nav {
  padding: 2rem;
  display: none;
}

.nav-menu {
  display: flex;
  list-style-type: none;
  justify-content: space-evenly;
}

.nav-menu__item a:hover {
  color: #000;
}

.nav-menu__link{
  color:#7a7676;
  text-decoration: none;
  font-weight: bold;
}

.nav-menu__link--active {
  color: #000;
}

/* Financial safety net */
.safety-net {
  background-color: rgba(0, 0, 0, 0.4);
  display: flex;
  flex-wrap: wrap;
}

.safety-net__heading {
  display: flex;
  flex-direction: column;
  padding: 3rem 2rem;
  overflow: hidden;
}

.safety-net__heading h1 {
  width: 12ch;
}

.safety-net__heading a {
  display: none;
}

.safety-net__information {
  padding: 0 2rem;
  margin-bottom: 3rem;
}

.safety-net__information p {
  line-height: 1.6em;
  color: rgba(0, 0, 0, 0.5);
  font-weight: 900;
}

.safety-net-wrapper {
  width: 100%;
  display: flex;
  flex-wrap: wrap;
  justify-content: space-evenly;
  margin-top:5rem;
  margin-bottom: 7rem;
}

.safety-net-card__img {
  min-width: 90%;
  min-height: 15rem;
  margin-top: -4rem;
  background-position: center 1rem;
  background-size: 15rem;
  background-repeat: no-repeat;
  border-radius: 4px;
  box-shadow: 0 0 15px rgba(0,0,0,.3);
}
.img-child {
  background-color: #add8e6; 
  background-image: url("./img/child.png");
  background-size: 9rem;
}
.img-adult {
  background-color: #FAB131;
  background-image: url("./img/adult.png");
  background-size: 10rem;

}
.img-old {
  background-color: #F17949;
  background-image: url("./img/old.png");
}

.safety-net-card {
  background-color: #fff;
  display: flex;
  max-width: 29rem;
  flex-direction: column;
  align-items: center;
  border-radius: 4px;
  margin-bottom: 8rem;
}

.safety-net-card:nth-child(1),
.safety-net-card:nth-child(2) {
  margin-right: 1rem;
}

.safety-net-card h2 {
  padding-top: 2rem;
}

.safety-net-card p {
  font-weight: 900;
  text-align: center;
  padding: 0 2rem 6rem 2rem;
  color:rgba(0, 0, 0, 0.4);
  font-size: .8em;
}

/* About us */
.about-us {
  background: #fab131;
  display: flex;
  flex-direction: column;
  align-items: center;
  padding: 50px;
}

.about-us h1 {
  color: white;
  font-size: 45px;
  margin-bottom: 30px;
  }

.about-us p {
  font-size: 14px;
  font-weight: 500;
  margin-bottom: 30px;
  text-align: center;
}

/* How it works (Abbreviated - hiw) */
.hiw {
  display: flex;
  flex-wrap: wrap;
  background-color: #fff;
}

.hiw__content {
  display: flex;
  flex-direction: column;
  align-items: center;
  min-width: 100%;
  min-height: 40vh;
  text-align: center;
  padding: 2rem;
}

.hiw__content--lb {
  background-color: lightblue;
}

.hiw__content--lg {
  background-color: #c5c1c1;
}

.hiw__content--ro {
  background-color: #F17949;
}

.hiw__info {
  margin: auto 0;
  color: rgba(0, 0, 0, 0.7);
}

.hiw__info--cb {
  color: #000;
}

.hiw__info--ch12 {
  width: 12ch;
}

.hiw__info--ch20 {
  width: 20ch;
}

.hiw__info--ch25 {
  width: 25ch;
}

.hiw__step {
  font-size: 1.8em;
  color:rgba(0, 0, 0, 0.4);
  align-self: flex-start;
}

/*Footer */


footer {
  height: 30vh;
  background-color: #666363;
}

.footer__top {
  background-color:#adaaaa;
  text-align: center;
  color:rgba(0, 0, 0, 0.7);
  padding-bottom: 2rem;
}

.footer__top h3 {
  margin-top: -1.8rem;
}

.footer__i {
  font-size: 3em;
}

.footer__top a {
  text-decoration:none;
  color:rgba(0, 0, 0, 0.7);
}



/* ~~~~~~~~~~~~~~Contact page ~~~~~~~~~~~~~~~~ */

/* Hero section */
.title {
  background: #C7DDEA;
  display: grid;
  justify-items: center;
  align-items: flex-start;
}

.title h1 {
  font-size: 45px;
  margin: 50px 0;
}

/* Contact form */
.contact {
  background-color: rgba(0, 0, 0, 0.4);
  display: flex;
  flex-wrap: wrap;
  justify-content: center;
  padding: 4rem 2rem;
  row-gap: 4rem;
}

.contact--ch15 {
  width: 15ch;
}
.contact form {
  max-width: 80rem;
  /* font-weight: 500; */
  /* letter-spacing: -1px; */
}
.contact form input {
  font-size: 1.1em;
  letter-spacing: -1px;
}

.contact label {
  font-weight: 900;
  font-size: 1.3em;

}
.contact textarea {
  font-size: 1.5em;
  width: 100%;
  letter-spacing: -1px;
}

.contact .form-controller button {
  align-self: flex-end;
  background: white;
  padding: 20px 44px;
  border:none;
  border-radius: 100px;
  text-decoration: none;
  text-transform: uppercase;
  font-family: 'Fira Sans', sans-serif;
  font-size: 14px;
  font-weight: bold;
  color: black;
  box-shadow: 0px 2px 0px rgba(0, 0, 0, 0.1);
  margin-top: 3rem;
  margin-right: 1rem;
}

/* Map section */
.address {
  background: #FAB131;
  padding: 20px;
  padding-bottom: 100px;
}

.address h1 {
  color: white;
  font-size: 45px;
  }

.address p {
color: white;
font-size: 14px;
font-weight: 500;
}

.map-img-small {
  max-width: 100%;
}

.map-img {
  display: none;
}


/* Components */
.form-controller {
  display: flex;
  flex-direction: column;
}
.form-controller__input {
  display: flex;
  flex-direction: column;
  border:none;
  row-gap: 1rem;
  margin-bottom: 1rem;
  border-radius: 4px;
}
.form-controller__input:focus {
  border: 1px solid #d85c5c;
}
.form-controller__input[type=email] {
  padding: 1.5rem;
}
.form-controller__input textarea {
  padding: 2rem;
  border: none;
  border-radius: 4px;
}
.form-controller__input--focus-border-red:focus {
  border: 1px solid #d85c5c;
}

.form-controller__label--grey {
  color:#f0ecec;
}



/* ~~~~~~~~~~~~~~Media Queries Landing page ~~~~~~~~~~~~~~~~ */
@media only screen and (min-width: 600px) {
/* Hero section */
.hero {
  display: grid;
  grid-template-columns: 1fr 1fr;
  }

.hero-main {
  grid-row: span 2;
  padding-left: 20px;
  }

.hero-main img {
  align-self: flex-end;
  max-width: 90%;
  margin-top: 0;
}

.hero-aside {
  min-height: 0;
}
}

@media only screen and (min-width: 650px) {
    /* About us */
.about-us p {
  max-width: 80%;
}
}

@media only screen and (min-width: 800px) {
  /*Hero section */
  .hero-main {
    padding-left: 100px;
  }
  .hero-main p {
    max-width: 35ch;
  }

  /* About us */
.about-us {
  padding: 180px 50px;
}

.about-us p {
  max-width: 50%;
}
}



/* Navigation */
@media only screen and (min-width: 600px) {
  nav {
    display: block
  }
}

/* Financial safety net */

@media only screen and (min-width: 750px) {

  .safety-net__heading {
    margin:0 auto 10rem auto;
    row-gap: 6rem;
    padding-top:8rem;
    padding-left: 5rem;
    
  }

  .safety-net__information {
    margin: 0 auto;
    padding: 8rem 2rem 0 0;

  }

  .safety-net__heading a {
    display: block;
    padding:1.5rem;
    width: 13.2rem;
    text-align: center;
    
  }
  .safety-net__information p {
    width: 30ch;
  }
}

@media only screen and (min-width: 890px) {
  .safety-net-wrapper {
    max-height: 12vh;
  }  
}

/* How it works */

@media only screen and (min-width: 700px) {
  .hiw__content {
    min-width: 33.33%;
    max-width: 33.33%;
  }
}


/* ~~~~~~~~~~~~~~ Media Queries Contact page ~~~~~~~~~~~~~~~~ */


/* Contact section */
@media only screen and (min-width: 920px) {
  .contact {
    padding-top: 10rem;
    padding-bottom: 5rem;
    justify-content: space-around;
  }

}

@media only screen and (min-width: 700px){
  .title {
    
    display: grid;
    grid-template-columns: 100px repeat(2, 1fr);
    grid-template-rows: repeat(2, 170px);
  
  }
  
  .title h1 {
    margin: 0;
    grid-column: 2;
    grid-row: 2;
  }
  
  .title img {
  grid-column: 3;
  grid-row: 2;
  align-self: end;
  justify-self: start;
  margin-left: 30px;
  }
}

@media only screen and (min-width: 900px){
  .title {
    
    display: grid;
    grid-template-columns: repeat(3, 1fr);
    grid-template-rows: repeat(2, 170px);
  
  }
  
  .title h1 {
    grid-column: 2;
    grid-row: 2;
  }
  
  .title img {
  grid-column: 3;
  grid-row: 2;
  
  align-self: end;
  
  }
}


@media only screen and (min-width: 620px) {
/* Map section */ 
.map-section {
  display: grid;
  grid-template-columns: repeat(12, 1fr);
  grid-template-rows: repeat(8, 48px);
}

.address {
  grid-row: 2/span 4;
  grid-column: 2 / span 4;
  z-index: 2;
}

.map-img {
  max-width: 100%;
  min-height: 100%;
  display: block;
  grid-column: 1/-1;
  grid-row: 1 / 9;
}

.map-img-small {
  display: none;
}
}

